--- a/A/templates/hello.html
+++ b/A/templates/hello.html
@@ -1,18 +1,11 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Hello</title>
-</head>
-<body>
+{% extends 'base.html' %}
 
+{% block title %} Hello {% endblock %}
+
+{% block content %}
     {% if name == 'admin' %}
         <p> sorry ... </p>
     {%  else %}
-        <h3>Hello "{{name|center:"25"}}" ... </h3>
+        <h3>Hello "{{name|upper}}" ... </h3>
     {%  endif %}
-
-
-
-</body>
-</html>
+{% endblock %}
