--- a/A/templates/home.html
+++ b/A/templates/home.html
@@ -1,15 +1,11 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Home</title>
-</head>
-<body>
+{% extends 'base.html' %}
+
+{% block title %} Home {% endblock %}
+
+{% block content %}
     {% for item in all %}
         <h3>{{ item.title }}</h3>
-        <smal>{{ item.craeted }}</smal>
-         <p>{{ item.body }}</p>
+<!--        <smal>{{ item.craeted }}</smal>-->
+<!--         <p>{{ item.body }}</p>-->
     {% endfor %}
-
-</body>
-</html>
+{% endblock %}
