--- a/A/templates/base.html
+++ b/A/templates/base.html
@@ -6,8 +6,8 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
     <style>
         .jumbotron{
-            padding: 20px;
-            margin-bottom:20px;
+            padding=10px;
+            margin-bottom:10px;
             background-color:#f8ee90
         }
     </style>
