--- a/A/templates/base.html
+++ b/A/templates/base.html
@@ -6,9 +6,9 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
     <style>
         .jumbotron{
-            padding=10px;
+            padding=20px;
             margin-bottom:10px;
-            background-color:#f8ee90
+            background-color:#E8ee90
         }
     </style>
 </head>
