--- a/A/templates/base.html
+++ b/A/templates/base.html
@@ -6,9 +6,9 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
     <style>
         .jumbotron{
-            padding=20px;
+            padding:20px;
             margin-bottom:10px;
-            background-color:#E8ee90
+            background-color:#1ee080
         }
     </style>
 </head>
@@ -16,7 +16,8 @@
 
     {% include 'navbar.html' %}
 
-    <div class="jumbotron"></div>
-    {% block content %} {% endblock %}
+    <div class="jumbotron">
+        {% block content %} {% endblock %}
+    </div>
 </body>
 </html>
