--- a/A/templates/detail.html
+++ b/A/templates/detail.html
@@ -2,6 +2,7 @@
 
 
 {% block content %}
+    <a href="{% url 'delete' todo.id %}" class="btn btn-danger">Delete</a>
     <h3>{{ todo.title }}</h3>>
     <small> {{ todo.created }} </small> <hr/>
     <p>{{ todo.body }}</p>
