--- a/A/templates/create.html
+++ b/A/templates/create.html
@@ -3,7 +3,7 @@
 
 {% block content  %}
     <h3>Create Todo</h3>
-    <form action="">
+    <form action="" methode="post" novalidate >
         {{ form.as_p }}
         <input type="submit" value="Create">
 
