--- a/A/templates/create.html
+++ b/A/templates/create.html
@@ -3,7 +3,8 @@
 
 {% block content  %}
     <h3>Create Todo</h3>
-    <form action="" methode="post" novalidate  >
+    <form action="" method="post" novalidate  >
+        {% csrf_token %}
         {{ form.as_p }}
         <input type="submit" value="Create">
 
