--- a/A/templates/home.html
+++ b/A/templates/home.html
@@ -14,9 +14,12 @@
 <!--    <p>{{request.user }}</p>-->
 
 
-    <a href="{% url 'user_register' %}">Register</a>
-    <a href="{% url 'user_login' %}">login</a>
-    <a href="{% url 'user_logout' %}">logout</a>
+    {% if request.user.is_authenticated %}
+        <a href="{% url 'user_logout' %}">logout</a>
+    {% else %}
+        <a href="{% url 'user_login' %}">login</a>
+        <a href="{% url 'user_register' %}">Register</a>
+    {% endif %}
 
 
     <div class="card">
